Fix inconsistent row spacing with only a few rows

--- a/src/style/SearchBox.scss
+++ b/src/style/SearchBox.scss
@@ -82,7 +82,8 @@
   .results {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(11rem, 1fr));
-    grid-gap: 0.5%;
+    grid-auto-rows: min-content;
+    grid-gap: 0.5rem;
     justify-items: center;
 
     width: 100%;
